// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon \`component\` prop can access to svg defs if has children 1`] = `
<i
  class="m-icon my-home-icon"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    height="1em"
    width="1em"
  >
    <title>
      Cool Home
    </title>
    <path
      d="'M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z'"
    />
  </svg>
</i>
`;

exports[`Icon should give warning and render <i>{null}</i> 1`] = `
<i
  class="m-icon"
/>
`;

exports[`Icon should render to a <i class="xxx"><svg>...</svg></i> 1`] = `
<i
  class="m-icon m-icon-search"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    height="1em"
    width="1em"
  >
    <use
      href="#icon-search"
    />
  </svg>
</i>
`;

exports[`Icon should support pass svg paths as children 1`] = `
<i
  class="m-icon"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <title>
      Cool Home
    </title>
    <path
      d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
    />
  </svg>
</i>
`;

exports[`Icon should support svg react component 1`] = `
<i
  class="m-icon my-home-icon"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    height="1em"
    width="1em"
  >
    <title>
      Cool Home
    </title>
    <path
      d="'M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z'"
    />
  </svg>
</i>
`;

exports[`Icon.createFromIconfontCN() should support iconfont.cn 1`] = `
<div
  class="icons-list"
>
  <i
    class="m-icon"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-tuichu"
      />
    </svg>
  </i>
  <i
    class="m-icon"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-facebook"
      />
    </svg>
  </i>
  <i
    class="m-icon"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-twitter"
      />
    </svg>
  </i>
</div>
`;
